--- a/composer.json
+++ b/composer.json
@@ -80,5 +80,10 @@
             "allow-contrib": false,
             "require": "7.3.*"
         }
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^4.1",
+        "symfony/maker-bundle": "^1.63",
+        "zenstruck/foundry": "^2.6"
     }
 }
